# jtk

./: CMakeLists.txt  LICENSE  README.md  TODO.txt  WhatsNew.txt
doc/: Doxygen  DoxygenLayout.xml  documentation.css  main.md
doc/tutorial/arrays/: arrays.md
doc/tutorial/collections/: collections.md
doc/tutorial/installation/: installation.md
doc/tutorial/introduction/: introduction.md
doc/tutorial/lists/: lists.md
doc/tutorial/maps/: maps.md
doc/tutorial/modules/: modules.md
doc/tutorial/nomenclature/: nomenclature.md
doc/tutorial/unit-tests/: unit-tests.md
example/clap/ZVM/: ZVM.c
example/collection/Student/: Student.c
example/collection/names/: Names.c
example/fs/Read/: FileInputStreamDemo.c  read.c
example/timsort/: integers.c  strings.c
example/unit/Number/: Main.c  Number.c  Number.h
include/com/onecube/jtk/fs/: NativeFileHandle.h
include/com/onecube/jtk/support/: NativeError.h
include/jtk/: Configuration.h
include/jtk/audio/wave/: DataChunk.h  FormatChunk.h  RiffChunk.h  WaveDecoder.h  WaveFile.h
include/jtk/clap/: ClapConfiguration.h  ClapParser.h  Parameter.h  ParameterType.h
include/jtk/collection/: CollectionHelper.h  CollectionType.h  CollectionVisitor.h  HashFunction.h  Iterator.h  Pair.h  module.h
include/jtk/collection/array/: Array.h  ArrayIterator.h  Arrays.h  ByteArray.h
include/jtk/collection/bag/: HashBag.h
include/jtk/collection/list/: ArrayList.h  ArrayListIterator.h  DoublyLinkedList.h  DoublyLinkedListIterator.h  DoublyLinkedNode.h  XorLinkedList.h  XorLinkedListIterator.h  XorLinkedNode.h  module.h
include/jtk/collection/map/: HashMap.h  HashMapEntry.h  HashMapEntryIterator.h  HashMapKeyIterator.h  HashMapValueIterator.h  RBTreeMap.h  RBTreeMapEntry.h  module.h
include/jtk/collection/queue/: ArrayQueue.h  LinkedQueue.h  PriorityQueue.h  module.h
include/jtk/collection/stack/: ArrayStack.h  LinkedStack.h  module.h
include/jtk/concurrent/: Thread.h  ThreadLocal.h  ThreadPool.h  ThreadState.h  module.h
include/jtk/concurrent/lock/: Mutex.h
include/jtk/concurrent/looper/: Message.h  MessageQueue.h  ThreadLooperAvailablityListener.h
include/jtk/core/: Assert.h  CString.h  CStringObjectAdapter.h  Character.h  DefaultErrorHandler.h  Double.h  Error.h  ErrorFlag.h  Float.h  Integer.h  Long.h  Object.h  ObjectAdapter.h  PointerObjectAdapter.h  String.h  StringBuilder.h  StringJoiner.h  StringObjectAdapter.h  System.h  VariableArguments.h  module.h
include/jtk/fs/: DirectoryHelper.h  FileHelper.h  FileInputStream.h  FileOpenMode.h  FileOutputStream.h  FilePermission.h  Path.h  PathComparisonFlag.h  PathHandle.h  module.h
include/jtk/function/: ComparatorFunction.h  PredicateFunction.h  module.h
include/jtk/hokum/: Tape.h
include/jtk/io/: BufferedInputStream.h  BufferedOutputStream.h  DataInputStream.h  InputStream.h  InputStreamHelper.h  OutputStream.h  module.h
include/jtk/json/: JsonParser.h
include/jtk/log/: ConsoleLogger.h  LogFilter.h  LogLevel.h  LogRecord.h  LogRecordFactory.h  Logger.h
include/jtk/mass/: Error.h  System.h  module.h
include/jtk/math/: DistanceMetric.h  Math.h  module.h
include/jtk/math/trignometry/: Trignometry.h
include/jtk/memory/: Allocator.h  VirtualMemory.h
include/jtk/net/: ClientSocket.h  ServerSocket.h  Socket.h  Url.h  module.h
include/jtk/support/: Configuration.h  ConfigurationEntry.h  TimeLogger.h  json.h
include/jtk/unit/: ConsoleProgressListener.h  SimpleProgressListener.h  TestCase.h  TestDefect.h  TestDefectType.h  TestFixture.h  TestListener.h  TestManager.h  TestResult.h  TestResultEntry.h  TestResultHelper.h  TestSuite.h  module.h
share/: jtk.pc.cmakein
source/jtk/: Configuration.c
source/jtk/audio/wave/: WaveDecoder.c
source/jtk/clap/: ClapParser.c
source/jtk/collection/: CollectionHelper.c  Iterator.c  Pair.c
source/jtk/collection/array/: Array.c  ArrayIterator.c  Arrays.c  ByteArray.c  Timsort.h
source/jtk/collection/list/: ArrayList.c  ArrayListIterator.c  DoublyLinkedList.c  DoublyLinkedListIterator.c  DoublyLinkedNode.c
source/jtk/collection/map/: HashMap.c  HashMapEntry.c  HashMapEntryIterator.c  HashMapKeyIterator.c  HashMapValueIterator.c  RBTreeMap.c  RBTreeMapEntry.c
source/jtk/collection/queue/: ArrayQueue.c  LinkedQueue.c
source/jtk/collection/stack/: ArrayStack.c  LinkedStack.c
source/jtk/concurrent/: Thread.c
source/jtk/core/: CString.c  CStringObjectAdapter.c  DefaultErrorHandler.c  Double.c  Float.c  Integer.c  Long.c  Object.c  PointerObjectAdapter.c  String.c  StringBuilder.c  StringJoiner.c  StringObjectAdapter.c  System.c
source/jtk/fs/: FileInputStream.c  FileOutputStream.c  Path.c  PathHandle.c
source/jtk/hokum/: Tape.c
source/jtk/io/: BufferedInputStream.c  BufferedOutputStream.c  DataInputStream.c  InputStream.c  InputStreamHelper.c  OutputStream.c
source/jtk/json/: JsonParser.c
source/jtk/log/: ConsoleLogger.c  LogRecord.c  Logger.c
source/jtk/math/: DistanceMetric.c  Math.c  Math2.c
source/jtk/net/: ServerSocket.c
source/jtk/support/: json.c
source/jtk/unit/: ConsoleProgressListener.c  SimpleProgressListener.c  TestCase.c  TestDefect.c  TestFixture.c  TestListener.c  TestManager.c  TestResult.c  TestResultHelper.c  TestSuite.c
source/linux/com/onecube/jtk/fs/: NativeFileHandle.c
source/linux/com/onecube/jtk/support/: NativeError.c
test/include/com/jtk/collection/list/: ArrayListTest.h
test/source/: Main.c
test/source/com/jtk/collection/list/: ArrayListTest.c  suite.json
